--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
 
     <h1 class="visually-hidden">Shahobiddin clone qildi</h1>
-
+  <!-- Behruz -->
       <!-- header -->
       <header class="site-header">
          <div class="site-header__head">
